--- a/templates/modalListPrice.twig
+++ b/templates/modalListPrice.twig
@@ -16,11 +16,11 @@
 					<table class="table table-sm">
 						<thead class="background-template-color text-template-color">
 							<tr>
-								<td class="text-left w-50">Descripción</td>
-								<td class="text-left w-25">Rubro</td>
-								<td class="text-center w-25">Importe</td>
+								<td class="text-left col-6">Descripción</td>
+								<td class="text-left col-2">Rubro</td>
+								<td class="text-center col-2">Importe</td>
 								<!--td class="text-right">Importe U$S</td-->
-								<td class="text-center w-25">Agregar</td>
+								<td class="text-center col-2">Agregar</td>
 							</tr>
 						</thead>
 						<tbody id="tbodyListPrice">
