--- a/templates/modalSetClient.twig
+++ b/templates/modalSetClient.twig
@@ -1,3 +1,82 @@
+<div class="modal fade" id="modalSetClientByButton" tabindex="-1" role="dialog">
+	<div class="modal-dialog modal-dialog-centered" role="document">
+		<div class="modal-content">
+			<div class="modal-header background-template-color">
+				<span class="modal-title  text-template-color">Clientes</span>
+				<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+					<span aria-hidden="true">&times;</span>
+				</button>
+			</div>
+			<div class="modal-body">
+				<div class="input-group shadow-sm mb-1">
+					<input 
+						type="text" 
+						list="listClient_SetClientByButton" 
+						id="inputTextToSearchClient_SetClientByButton" 
+						class="form-control form-control-sm text-center"  
+						title="Ingrese nombre, RUT o CI para buscar cliente" 
+						onchange="searchCompleteData(this.value, event, 'listClient_SetClientByButton', 'modalSetClientByButton')" 
+						onkeyup="searchClient(this, event, 'listClient_SetClientByButton', 'modalSetClientByButton')" 
+						onkeypress="return keyPressAddClient(event, this.value, 100)" 
+						autocomplete="off"
+					>
+					<datalist id="listClient_SetClientByButton" ></datalist>
+				</div>
+				<div class="d-flex ">
+					<div class="form-group w-100 mb-1">
+						<label for="inputNameClient_SetClientByButton" class="col-form-label col-form-label-sm obligatorio">Nombre</label>
+						<input type="text" class="form-control form-control-sm shadow-sm" id="inputNameClient_SetClientByButton" onkeypress="return keyPressAddClient(event, this.value, 50)">
+					</div>
+				</div>
+				<div class="form-row mb-0">
+					<div class="form-group col mb-1">
+						<label for="inputDocumentClient_SetClientByButton" class="col-form-label col-form-label-sm obligatorio">Documento</label>
+						<input type="number" class="form-control form-control-sm shadow-sm" id="inputDocumentClient_SetClientByButton" onkeypress="return keyPressAddClient(event, this.value, 12)">
+					</div>
+					<div class="form-group col mb-1">
+						<label for="inputPhoneClient_SetClientByButton" class="col-form-label col-form-label-sm">Celular/Teléfono</label>
+						<input type="number" class="form-control form-control-sm shadow-sm" id="inputPhoneClient_SetClientByButton" onkeypress="return keyPressAddClient(event, this.value, 12)">
+					</div>
+				</div>
+				<div class="d-flex ">
+					<div class="form-group w-100 mb-1">
+						<label for="inputEmailClient_SetClientByButton" class="col-form-label col-form-label-sm">Email</label>
+						<input type="text" class="form-control form-control-sm shadow-sm" id="inputEmailClient_SetClientByButton" onkeypress="return keyPressAddClient(event, this.value, 280)">
+					</div>
+				</div>
+				<div class="d-flex ">
+					<div class="form-group w-100 mb-1">
+						<label for="inputAddressClient_SetClientByButton" class="col-form-label col-form-label-sm obligatorio">Dirección</label>
+						<input type="text" class="form-control form-control-sm shadow-sm" id="inputAddressClient_SetClientByButton" onkeypress="return keyPressAddClient(event, this.value, 280)">
+					</div>
+				</div>
+				<div class="form-row mb-0">
+					<div class="form-group col mb-1">
+						<label for="inputCityClient_SetClientByButton" class="col-form-label col-form-label-sm obligatorio">Ciudad</label>
+						<input type="text" class="form-control form-control-sm shadow-sm" id="inputCityClient_SetClientByButton" onkeypress="return keyPressAddClient(event, this.value, 50)">
+					</div>
+					<div class="form-group col mb-1">
+						<label for="inputDepartmentClient_SetClientByButton" class="col-form-label col-form-label-sm obligatorio">Departamento</label>
+						<input type="text" class="form-control form-control-sm shadow-sm" id="inputDepartmentClient_SetClientByButton" onkeypress="return keyPressAddClient(event, this.value, 50)">
+					</div>
+				</div>
+				<div class="alert alert-info m-0" role="alert">
+					( * ): Campo obligatorio
+				</div>
+			</div>
+			<div class="modal-footer justify-content-between">
+				<button type="button" class="btn btn-danger shadow-sm" data-dismiss="modal">Cancelar</button>
+				<button type="button" class="btn background-template-color2 text-template-background shadow-sm" id="setConsumidorFinalSetClientByButton" onclick="setConsumidorFinalByButton()" data-dismiss="modal" title="Consumidor Final">
+					
+					<span class="maintext"> <i class="fas fa-user-times"></i> </span>  <span class="shortcut"> (Esc) </span>
+				</button>
+				<button type="button" class="btn background-template-color2 text-template-background shadow-sm" onclick="cleanFields('modalSetClientByButton')" title="Limpiar campos"><i class="fas fa-eraser"></i></button>
+				<button id="btnConfirmSetClientByButton" onclick="setClient('modalSetClientByButton')" type="button" class="btn btn-success shadow-sm" onkeypress="return keyPressAddClient(event, null, null)">Confirmar</button>
+			</div>
+		</div>
+	</div>
+</div>
+
 <div class="modal fade" id="modalSetClient" tabindex="-1" role="dialog">
 	<div class="modal-dialog modal-dialog-centered" role="document">
 		<div class="modal-content">
@@ -8,63 +87,69 @@
 				</button>
 			</div>
 			<div class="modal-body">
-				<div class="input-group mb-3 shadow-sm">
-					<input type="text" list="listClient" id="inputTextToSearchClient" title="Ingrese nombre, RUT o CI para buscar cliente" onchange="searchCompleteData(this.value, event)" onkeyup="searchClient(this, event)" class="form-control form-control-sm text-center" onkeypress="return keyPressAddClient(event, this.value, 100)" autocomplete="off">
+				<div class="input-group mb-1 shadow-sm">
+					<input 
+						type="text" 
+						list="listClient" 
+						id="inputTextToSearchClient" 
+						title="Ingrese nombre, RUT o CI para buscar cliente" 
+						onchange="searchCompleteData(this.value, event, 'listClient', 'modalSetClient')" 
+						onkeyup="searchClient(this, event, 'listClient', 'modalSetClient')" 
+						class="form-control form-control-sm text-center" 
+						onkeypress="return keyPressAddClient(event, this.value, 100)" 
+						autocomplete="off"
+					>
 					<datalist id="listClient" ></datalist>
 				</div>
 				<div class="d-flex">
-					<div class="form-group w-75">
-						<label for="inputNameClient" class="col-form-label col-form-label-sm">Nombre</label>
+					<div class="form-group w-100 mb-1">
+						<label for="inputNameClient" class="col-form-label col-form-label-sm obligatorio">Nombre</label>
 						<input type="text" class="form-control form-control-sm shadow-sm" id="inputNameClient" onkeypress="return keyPressAddClient(event, this.value, 50)">
 					</div>
 				</div>
-				<!--div class="d-flex">
-					<div class="form-group w-50">
-						<label for="inputDocumentClient" class="col-form-label col-form-label-sm">Documento</label>
+				<div class="form-row mb-0">
+					<div class="form-group col mb-1">
+						<label for="inputDocumentClient" class="col-form-label col-form-label-sm obligatorio">Documento</label>
 						<input type="number" class="form-control form-control-sm shadow-sm" id="inputDocumentClient" onkeypress="return keyPressAddClient(event, this.value, 12)">
 					</div>
-					<div class="form-group w-50">
-						<label for="inputDocumentClient" class="col-form-label col-form-label-sm">Celular/Teléfono</label>
-						<input type="number" class="form-control form-control-sm shadow-sm" id="inputDocumentClient" onkeypress="return keyPressAddClient(event, this.value, 12)">
-					</div>
-				</div-->
-				<div class="form-row">
-					<div class="form-group col">
-						<label for="inputDocumentClient" class="col-form-label col-form-label-sm">Documento</label>
-						<input type="number" class="form-control form-control-sm shadow-sm" id="inputDocumentClient" onkeypress="return keyPressAddClient(event, this.value, 12)">
-					</div>
-					<div class="form-group col">
+					<div class="form-group col mb-1">
 						<label for="inputPhoneClient" class="col-form-label col-form-label-sm">Celular/Teléfono</label>
 						<input type="number" class="form-control form-control-sm shadow-sm" id="inputPhoneClient" onkeypress="return keyPressAddClient(event, this.value, 12)">
 					</div>
 				</div>
 				<div class="d-flex">
-					<div class="form-group w-75">
+					<div class="form-group w-100 mb-1">
 						<label for="inputEmailClient" class="col-form-label col-form-label-sm">Email</label>
 						<input type="text" class="form-control form-control-sm shadow-sm" id="inputEmailClient" onkeypress="return keyPressAddClient(event, this.value, 280)">
 					</div>
 				</div>
 				<div class="d-flex">
-					<div class="form-group w-75">
-						<label for="inputAddressClient" class="col-form-label col-form-label-sm">Dirección</label>
+					<div class="form-group w-100 mb-1">
+						<label for="inputAddressClient" class="col-form-label col-form-label-sm obligatorio">Dirección</label>
 						<input type="text" class="form-control form-control-sm shadow-sm" id="inputAddressClient" onkeypress="return keyPressAddClient(event, this.value, 280)">
 					</div>
 				</div>
-				<div class="form-row">
-					<div class="form-group col">
-						<label for="inputCityClient" class="col-form-label col-form-label-sm">Ciudad</label>
+				<div class="form-row mb-0">
+					<div class="form-group col mb-1">
+						<label for="inputCityClient" class="col-form-label col-form-label-sm obligatorio">Ciudad</label>
 						<input type="text" class="form-control form-control-sm shadow-sm" id="inputCityClient" onkeypress="return keyPressAddClient(event, this.value, 50)">
 					</div>
-					<div class="form-group col">
-						<label for="inputDepartmentClient" class="col-form-label col-form-label-sm">Departamento</label>
+					<div class="form-group col mb-1">
+						<label for="inputDepartmentClient" class="col-form-label col-form-label-sm obligatorio">Departamento</label>
 						<input type="text" class="form-control form-control-sm shadow-sm" id="inputDepartmentClient" onkeypress="return keyPressAddClient(event, this.value, 50)">
 					</div>
+				</div>
+				<div class="alert alert-info m-0" role="alert">
+					( * ): Campo obligatorio
 				</div>
 			</div>
 			<div class="modal-footer justify-content-between">
 				<button type="button" class="btn btn-danger shadow-sm" data-dismiss="modal">Cancelar</button>
-				<button type="button" class="btn background-template-color2 text-template-background shadow-sm" onclick="cancelClinetSelected()"><i class="fas fa-user-times"></i></button>
-				<button id="btnConfirmSetClient" onclick="selectClient()" type="button" class="btn btn-success shadow-sm" onkeypress="return keyPressAddClient(event, null, null)">Confirmar</button>
+				<button type="button" class="btn background-template-color2 text-template-background shadow-sm" id="setConsumidorFinal" onclick="setConsumidorFinal()" data-dismiss="modal" title="Consumidor Final">
+					<span class="maintext"> <i class="fas fa-user-times"></i> </span>  <span class="shortcut"> (Esc) </span>
+				</button>
+				<button type="button" class="btn background-template-color2 text-template-background shadow-sm" onclick="cleanFields('modalSetClient')" title="Limpiar campos"><i class="fas fa-eraser"></i></button>
+				<button id="btnConfirmSetClient" onclick="setClient('modalSetClient')" type="button" class="btn btn-success shadow-sm" onkeypress="return keyPressAddClient(event, null, null)">Confirmar</button>
 			</div>
 		</div>
 	</div>
