--- a/templates/modalAddProduct.twig
+++ b/templates/modalAddProduct.twig
@@ -10,30 +10,42 @@
 			<div class="modal-body">
 				<div class="d-flex flex-row-reverse">
 					<div class="form-group col-md-2">
-						<label for="inputPriceProduct" class="col-form-label col-form-label-sm">Precio Unit.</label>
+						<label for="inputPriceProduct" class="col-form-label col-form-label-sm obligatorio">Precio Unit.</label>
 						<input type="number" class="form-control form-control-sm shadow-sm text-center" id="inputPriceProduct" onkeypress="return keyPressAddDetail(event, this.value, 10)" tabindex=4>
-
 					</div>
 					<div class="form-group">
-						<label for="inputDiscountProduct" class="col-form-label col-form-label-sm">Descuento</label>
+						<label id="inputDiscountProductLabel" for="inputDiscountProduct" class="col-form-label col-form-label-sm">Descuento</label>
 						<input type="number" class="form-control form-control-sm shadow-sm text-center" id="inputDiscountProduct" onkeypress="return keyPressAddDetail(event, this.value, 10)" tabindex=3>
 					</div>
-					<div class="form-group col-md-8">
-						<label for="inputDescriptionProduct" class="col-form-label col-form-label-sm">Descripción</label>
-						<input type="search" list="listDetail" class="form-control form-control-sm shadow-sm" id="inputDescriptionProduct" onsearch="getSuggestionDetail(this)" onkeyup="this.onsearch()" onkeypress="return keyPressAddDetail(event, this.value, 50)" tabindex=2><!--onkeypress="this.onchange()"-->
-						<datalist id="listDetail" ></datalist>
+					<div class="form-group col-md-7">
+						<label for="inputDescriptionProduct" class="col-form-label col-form-label-sm obligatorio">Descripción</label>
+						<input type="search" list="listProducts" class="form-control form-control-sm shadow-sm" id="inputDescriptionProduct" onsearch="getSuggestionProduct(this)" autocomplete="off" onkeyup="this.onsearch()" onkeypress="return keyPressAddDetail(event, this.value, 50)" tabindex=2><!--onkeypress="this.onchange()"-->
+						<datalist id="listProducts" ></datalist>
 					</div>
 					<div class="form-group">
 						<label for="inputCountProduct" class="col-form-label col-form-label-sm">Cantidad</label>
-						<input type="number" class="form-control form-control-sm shadow-sm text-center" min=1 id="inputCountProduct" onkeypress="return keyPressAddDetail(event, this.value, 10)" tabindex=1>
+						<input type="number" class="form-control form-control-sm shadow-sm text-center" min=0.001 id="inputCountProduct" onkeypress="return keyPressAddDetail(event, this.value, 10)" tabindex=1>
 					</div>
 				</div>
-				<div class="d-flex">
-					<div class="form-group w-100">
-						<label for="inputDetailProduct" class="col-form-label col-form-label-sm">Detalle</label>
-						<textarea id="inputDetailProduct" class="form-control shadow-sm rounded-0" maxlength="400" style="resize: none;" rows="2"  onkeypress="return keyPressAddDetail(event, null, null)" tabindex=5></textarea> <!--onkeydown="return keyPressAddDetail(event, null,null)"-->
+				<div class="row">
+					<div class="col-8 d-flex">
+						<div class="form-group w-100">
+							<label for="inputDetailProduct" class="col-form-label col-form-label-sm">Detalle</label>
+							<textarea id="inputDetailProduct" class="form-control shadow-sm rounded-0" maxlength="400" style="resize: none; height:70px;" rows="2" onkeypress="return keyPressAddDetail(event, null, null)" tabindex=5></textarea> <!--onkeydown="return keyPressAddDetail(event, null,null)"-->
+						</div>
+					</div>
+					<div class="col d-flex">
+						<div class="form-group">
+							<label for="inputUnidadVentaProduct" class="col-form-label col-form-label-sm" title="Define si el producto se venderá por unidad, peso o litros. Esto afecta cómo se ingresa la cantidad.">Unidad de venta</label>
+							<select class="custom-select custom-select-sm shadow-sm text-center" id="inputUnidadVentaProduct" size="3" onkeydown="keyPressAddDetail(event)" tabindex=6>
+								<option value="Unidad" selected>Unidad</option>
+								<option value="Peso">Peso (kg)</option>
+								<option value="Litro">Volumen (litro)</option>
+							</select>
+						</div>
 					</div>
 				</div>
+
 				<div class="row flex-row-reverse">
 					<div class="form-group col">
 						<label for="inputTotalProduct" class="col-form-label col-form-label-sm">Importe</label>
@@ -56,10 +68,13 @@
 						<input type="number" class="form-control form-control-sm shadow-sm text-center" id="inputSubtotalProduct" readonly>
 					</div>
 				</div>
+				<div class="alert alert-info m-0" role="alert">
+					( * ): Campo obligatorio
+				</div>
 			</div>
 			<div class="modal-footer justify-content-between">
 				<button type="button" class="btn btn-danger shadow-sm" data-dismiss="modal">Cancelar</button>
-				<button id="btnConfirmAddDetail" type="button" class="btn btn-success shadow-sm" onclick="insertNewDetail()" onkeypress="return keyPressAddDetail(event, null,null)" tabindex=7>Confirmar</button>
+				<button id="btnConfirmAddDetail" type="button" class="btn btn-success shadow-sm" onclick="insertNewArticleToCart()" onkeypress="return keyPressAddDetail(event, null,null)" tabindex=7>Confirmar</button>
 			</div>
 		</div>
 	</div>
